# az-ai-search-to-milvus

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  pyproject.toml
docs/: migration_guide.md  milvus_advantages.md  schema_mapping.md  testing_guide.md
docs/en/: migration_guide.md  milvus_advantages.md  schema_mapping.md  testing_guide.md
docs/zh/: migration_guide.md  milvus_advantages.md  schema_mapping.md  testing_guide.md
examples/: 01_assess.py  02_migrate.py  03_validate.py  04_schema_from_json.py  config.example.yaml  config.test.yaml  e2e_migration_test.py  setup_test_index.py  test_data_generator.py
src/az_search_to_milvus/: __init__.py  __main__.py  assessment.py  cli.py  config.py  data_migrator.py  index_mapping.py  schema_converter.py  type_mapping.py  validation.py
src/az_search_to_milvus/clients/: ai_search.py  milvus.py
src/az_search_to_milvus/utils/: checkpoint.py  logging.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_data_migrator.py  test_index_mapping.py  test_schema_converter.py  test_type_mapping.py
